force-app/main/default/objects/Zuora_Quote_to_ZObject_Mapping__c/fields/Enable_for_Amendments__c.field-meta.xml
<CustomField>
    <fullName>Enable_for_Amendments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether we want to perform updates from this record for Amendment Quotes</description>
    <inlineHelpText>Whether we want to perform updates from this record for Amendment Quotes</inlineHelpText>
    <label>Enable for Amendments</label>
    <type>Checkbox</type>
</CustomField>