force-app/main/default/objects/Zuora_Quote_to_ZObject_Mapping__c/fields/Enable_for_New_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Enable_for_New_Subscriptions__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether we want to perform updates from this record for New Subscription Quotes</description>
    <inlineHelpText>Whether we want to perform updates from this record for New Subscription Quotes</inlineHelpText>
    <label>Enable for New Subscriptions</label>
    <type>Checkbox</type>
</CustomField>