force-app/main/default/objects/Zuora_Quote_to_ZObject_Mapping__c/fields/Quote_Field__c.field-meta.xml
<CustomField>
    <fullName>Quote_Field__c</fullName>
    <description>API Name of Quote Field to populate field on Zuora Object</description>
    <inlineHelpText>API Name of Quote Field to populate field on Zuora Object</inlineHelpText>
    <label>Quote Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>