force-app/main/default/objects/Zuora_Quote_to_ZObject_Mapping__c/fields/Zuora_Object__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Object__c</fullName>
    <description>Which Zuora Object we should update (Account, Bill To Contact, Sold To Contact, Subscription)</description>
    <inlineHelpText>Which Zuora Object we should update (Account, Bill To Contact, Sold To Contact, Subscription)</inlineHelpText>
    <label>Zuora Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>