force-app/main/default/objects/Zuora_Quote_to_ZObject_Mapping__c/fields/Zuora_Object_Field__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Object_Field__c</fullName>
    <description>API Name of field on Zuora Object to Update (Description, Notes, SomeCustomField__c, etc)</description>
    <inlineHelpText>API Name of field on Zuora Object to Update (Description, Notes, SomeCustomField__c, etc)</inlineHelpText>
    <label>Zuora Object Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>